styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}


a {
  color: black;
  font-weight: bold;
}

* {
  box-sizing: border-box;
}

header#siteHeader {
  width: 100%;
  z-index: 99999;
  height: 54px;
}

.particles {
  z-index: -999;
  height: 50%;
  width: 100%;
}

@media print {
  .no-print, .no-print *
  {
    display: none !important;
  }

  ::-webkit-scrollbar { display: none !important; }

}

.resume-list {
  margin: 0;
  padding: 0;
  list-style-position: inside;
  line-height: 18px;
}

pre {
  background-color: #333333;
  padding: 12px;
  color: #FFFFFF;
  overflow-x: scroll;
  width: 100%;
  border-radius: 12px;
}

code {
  color: lightgreen;
}

